fix squished watch now

--- a/src/pages/welcome/welcome.module.less
+++ b/src/pages/welcome/welcome.module.less
@@ -52,8 +52,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 24px;
-  padding-bottom: 48px; // this is to handle the bottom nav
+  padding: 0px 24px;
 }
 
 .homeContent {
@@ -126,7 +125,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 15%;
+  height: 20%;
   width: 100%;
   padding: 2%;
   .youTubeButton {
@@ -138,6 +137,7 @@
     border-radius: 30px;
     padding: 2%;
     width: 100%;
+    min-height: 35px;
     @media screen and (max-width: @phone) {
       border-radius: 20px;
     }
